Bug 296331 - state diagram deep/shallow history widget resizing problem
Summary: state diagram deep/shallow history widget resizing problem
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-19 09:06 UTC by Ralf Habacker
Modified: 2013-11-06 17:08 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2012-03-19 09:06:06 UTC
The Deep/Shallow History widget contains text in the form 'H*'/'H'. 
When increasing the size of the widget the text stays in the top left corner of the widgets and is not centered as text of other widgets like the state widget
Comment 1 Andi Fischer 2012-03-19 21:12:09 UTC
I propose that we disable the resizing of Deep/Shallow History widgets, because bigger widgets make no sense in this case.
Comment 2 Oliver Kellogg 2012-03-19 21:21:32 UTC
(In reply to comment #1)
> I propose that we disable the resizing of Deep/Shallow History widgets,
> because bigger widgets make no sense in this case.

+1
... and similar for state diagram start/end state (at least define a maximumSize in this case, right now we can draw big red balloons :)
Comment 3 Oliver Kellogg 2012-03-21 07:09:44 UTC
SVN commit 1286480 by okellogg:

StateWidget:
- Copy m_drawVertical and its accessors and load/save code from
  ForkJoinWidget to allow flipping fork/join horizontal.
- maximumSize(): Reimplement from UMLWidget.

ListPopupMenu::ListPopupMenu(parent, object, multi, unique):
- At case WidgetBase::wt_State, add mt_Flip for pState->stateType()
  StateWidget::Fork and StateWidget::Join.



 M  +1 -0      ChangeLog  
 M  +12 -1     umbrello/listpopupmenu.cpp  
 M  +50 -0     umbrello/widgets/statewidget.cpp  
 M  +5 -0      umbrello/widgets/statewidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1286480
Comment 4 Ralf Habacker 2012-03-21 07:51:30 UTC
(In reply to comment #3)
> SVN commit 1286480 by okellogg:
> 
> StateWidget:
> - Copy m_drawVertical and its accessors and load/save code from
>   ForkJoinWidget to allow flipping fork/join horizontal.

This imply to update  XMI_FILE_VERSION in umldoc.cpp ?
Comment 5 Ralf Habacker 2012-03-21 07:55:20 UTC
(In reply to comment #3)
> SVN commit 1286480 by okellogg:
> 
> - maximumSize(): Reimplement from UMLWidget.

relating to the limit: do you have tried to increase the diagram font size to say 28 ?
Comment 6 Ralf Habacker 2012-03-21 16:12:23 UTC
SVN commit 1286597 by habacker:

Update of xmi file version - revision 1286480 added an xmi attribute for state widgets.


 M  +1 -1      umldoc.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1286597
Comment 7 Oliver Kellogg 2012-03-21 19:19:27 UTC
SVN commit 1286610 by okellogg:

Address https://bugs.kde.org/show_bug.cgi?id=296331#c5 as follows:

StateWidget::paint (case {Deep,Shallow}History):
- Consider font metrics in calculation of drawText() x and y args.

StateWidget::minimumSize (case {Deep,Shallow}History):
- Set width and height to active QFontMetrics::lineSpacing().

StateWidget::maximumSize (case {Deep,Shallow}History):
- Allow for enlarging to active QFontMetrics::lineSpacing() + 10.



 M  +29 -7     statewidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1286610
Comment 8 Oliver Kellogg 2012-03-21 19:22:52 UTC
(In reply to comment #6)
> SVN commit 1286597 by habacker:
> 
> Update of xmi file version - revision 1286480 added an xmi attribute for
> state widgets.
> 

You're right, I forgot that. Thanks.