StateWidget: - Copy m_drawVertical and its accessors and load/save code from   ForkJoinWidget to allow flipping fork/join horizontal. - maximumSize(): Reimplement from UMLWidget.

ListPopupMenu::ListPopupMenu(parent, object, multi, unique):
- At case WidgetBase::wt_State, add mt_Flip for pState->stateType()
  StateWidget::Fork and StateWidget::Join.

BUG: 296331

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1286480